fix overflow issue with mobile device

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,7 @@
     scroll-margin-top: 5rem;
     font-family: 'roboto', sans-serif;
 }
+.main {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
